Added -no-print and -p options, explicit datatype declaration, and restriction of use of variables before initalization.

--- a/README
+++ b/README
@@ -9,6 +9,7 @@ The language followed by the current master is described by:
 <input>     ::= READINT LPAREN STRING RPAREN | READSTR LPAREN STRING RPAREN
 <assign>    ::= ID <listindex> ASSIGN <expr> SEMICOLON
 <listindex> ::= LBRACKET <expr> RBRACKET | empty
+<type>      ::= INTEGER | FLOAT | CHAR | BOOLEAN | empty
 <expr>      ::= <value> <exprt>
 <exprt>     ::= <math_rel> <expr> | empty
 <value>     ::= ID <listindex> | STRING | INT | BOOL | <input> | LBRACKET <exprlist> RBRACKET
@@ -27,6 +28,13 @@ The language followed by the current master is described by:
 To build:
 1. Open the accompanying Code::Blocks project and build it there. (Recommended for Windows users)
 2. Utilize the accompanying makefile. (Recommended for Unix users, but using Code::Blocks is cool, too)
+
+How to use:
+  LexicalAnalyzer [options] file [file file ...]
+  Options:
+    -o <filename> : All output is piped to the specified filename.
+    -p            : Parse-only. Just checks syntax.
+    -no-print     : Does not print out the AST after it is created.
 
 Runtime errors:
 1. If the syntax of the input file is definitely correct, but there is still a syntax error being thrown, then it is likely to do with the line endings. The program expects Unix style-endings, but Windows-style may be present. Use d2u, dos2unix, or sed to modify the input file to Unix-style line endings.
