--- a/README
+++ b/README
@@ -11,7 +11,7 @@ The language followed by the current master is described by:
 <vardect>   ::= ASSIGN <expr> SEMICOLON | SEMICOLON
 <assign>    ::= ID <listindex> ASSIGN <expr> SEMICOLON
 <listindex> ::= LBRACKET <expr> RBRACKET | empty
-<type>     ::= STRINGT | INTEGER | FLOAT | CHAR | BOOLEAN
+<type>      ::= VAR
 <subtype>   ::= LBRACKET RBRACKET | empty
 <expr>      ::= <value> <exprt>
 <exprt>     ::= <math_rel> <expr> | empty
@@ -28,16 +28,101 @@ The language followed by the current master is described by:
 <bool_rel>  ::= EQUAL | LESS_THAN | GREATER_THAN | LESS_THAN_EQUAL | GREATER_THAN_EQUAL | NOT_EQUAL
 <loop>      ::= WHILE <bexpr> DO <stmts> END
 
+
 To build:
 1. Open the accompanying Code::Blocks project and build it there. (Recommended for Windows users)
 2. Utilize the accompanying makefile. (Recommended for Unix users, but using Code::Blocks is cool, too)
 
+
 How to use:
   LexicalAnalyzer [options] file [file file ...]
   Options:
-    -o <filename> : All output is piped to the specified filename.
+    -o <filename> : All output (except errors) is piped to the specified filename.
     -p            : Parse-only. Just checks syntax.
     -no-print     : Does not print out the AST after it is created.
 
+
 Runtime errors:
 1. If the syntax of the input file is definitely correct, but there is still a syntax error being thrown, then it is likely to do with the line endings. The program expects Unix style-endings, but Windows-style may be present. Use d2u, dos2unix, or sed to modify the input file to Unix-style line endings.
+
+
+Type Evaluations:
+-The float type does not currently exist. So the floor of the real result is taken as an int.
+-Boolean values are treated somewhat logically. Two true values are true, two false are false. Adding to true is true, subtracting from true is false. The opposites are true. They cannot be combined with any other types.
+
+x:int = 6, y:int = 3
+  (y + x):int = 9
+  (x + y):int = 9
+  (y - x):int = -3
+  (x - y):int = 3
+  (y * x):int = 18
+  (x * y):int = 18
+  (y / x):int = 0
+  (x / y):int = 2
+  (y % x):int = 0
+  (x % y):int = 0
+
+x:string = "bar", y:string = "foo"
+  (y + x):string = "foobar"
+  (x + y):string = "barfoo"
+  (y - x):undefined
+  (x - y):undefined
+  (y * x):undefined
+  (x * y):undefined
+  (y / x):undefined
+  (x / y):undefined
+  (y % x):undefined
+  (x % y):undefined
+
+x:boolean = true, y:boolean = false
+  (x + x):boolean = true
+  (y + y):boolean = false
+  (y + x):boolean = true
+  (x + y):boolean = true
+  (x - x):boolean = false
+  (y - y):boolean = true
+  (y - x):boolean = false
+  (x - y):boolean = false
+  (y * x):undefined
+  (x * y):undefined
+  (y / x):undefined
+  (x / y):undefined
+  (y % x):undefined
+  (x % y):undefined
+
+x:int = 5, y:boolean = false
+  (y + x):undefined
+  (x + y):undefined
+  (y - x):undefined
+  (x - y):undefined
+  (y * x):undefined
+  (x * y):undefined
+  (y / x):undefined
+  (x / y):undefined
+  (y % x):undefined
+  (x % y):undefined
+
+x:int = 5, y:string = "foo"
+  (y + x):string = "foo5"
+  (x + y):undefined
+  (y - x):undefined
+  (x - y):undefined
+  (y * x):string = "foofoofoofoofoo"
+  (x * y):undefined
+  (y / x):undefined
+  (x / y):undefined
+  (y % x):undefined
+  (x % y):undefined
+
+x:boolean = true, y:string = "foo"
+  (y + x):undefined
+  (x + y):undefined
+  (y - x):undefined
+  (x - y):undefined
+  (y * x):undefined
+  (x * y):undefined
+  (y / x):undefined
+  (x / y):undefined
+  (y % x):undefined
+  (x % y):undefined
+
