--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 This project is an Independent Study to develop a compiler/interpreter/etc.
 
 Current Status:
--Working across the all types.
--Some expressions are not implemented: string * int, string BOOLEAN_RELATION string
---strcmp, strmulint assembly procedures needed.
+-Working across the all types and boolean relations.
+-Some expressions are not implemented: string * int
+--strmulint assembly procedure needed.
 -Lists are not implemented.
 -All variables are global, local scopes are not supported.
 -32-bit only
