--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 This project is an Independent Study to develop a compiler/interpreter/etc.
 
 Current Status:
--Working across the all types and boolean relations.
+-Interpreter is fully functional
+-Compiler working across the all types and boolean relations.
 -string * int is working, but has caveats.
 --Restricted to using the first 8 bits of the int. Possible range is [-128, 127].
 --Strings are limited to lengths of 255, otherwise segfault.
---Modifies the string variable, even without an assignment.
 -Lists are not implemented.
 -All variables are global, local scopes are not supported.
 --Variables in smaller environments will clash with their global counterparts.
@@ -13,12 +13,13 @@ Current Status:
 -Apostrophes do not work in strings.
 -Expressions are solved in right-to-left order. e.g. 5 * 1 - 2 = -5
 -Explicitly negative numbers are not supported.
+--Printing integers will always print the unsigned version.
 
-Working compiler Tests:
+Tests:
 -In the bin/tests folder.
 --max.txt
 --summation.txt
--All tests work with the interpreter.
+--string_manipulation.txt
 
 
 The language followed by the current master is described by:
@@ -67,7 +68,7 @@ Runtime errors:
 
 Type Evaluations:
 -All type relations that are not defined here will result in error.
--Lists of lists are not currently supported.
+-Lists of lists are not currently supported by any feature.
 
 x::int, y::int =>
   (x + y) :: int
