--- a/README
+++ b/README
@@ -60,8 +60,14 @@ How to use:
   Options:
     -o <filename> : All output (except errors) is piped to the specified filename.
     -p            : Parse-only. Just checks syntax.
+    -a            : Does not interpret, outputs assembly. Without this switch, it will only interpret. Must be used with the -o option to produce an asm file.
     -no-print     : Does not print out the AST after it is created.
-
+    
+  In order to build the assembly into an executable, use your favorite Intel syntax assembler and use 32-bit mode.
+  Example:
+    nasm -f elf32 fibonacci.asm
+    ld -m elf_i386 fibonacci.o -o fibonacci
+    ./fibonacci
 
 Runtime errors:
 1. If the syntax of the input file is definitely correct, but there is still a syntax error being thrown, then it is likely to do with the line endings. The program expects Unix style-endings, but Windows-style may be present. Use d2u, dos2unix, or sed to modify the input file to Unix-style line endings.
